# Book-PAI

./: CLAUDE.md  package-lock.json  package.json
backend/: main.py  pyproject.toml
backend/app/: chat_agent.py  embed.py  main.py
frontend/: docusaurus.config.js  package-lock.json  package.json
frontend/docs/: language-switcher.md
frontend/src/components/: ChatBotLayout.tsx  GlobalChatBot.js  LanguageSwitcherInjector.js
frontend/static/js/: chatbot-injector.js
history/prompts/001-chatbot-ui/: 1-docusaurus-chatbot-ui-integration.spec.prompt.md  2-docusaurus-chatbot-ui-planning.plan.prompt.md  3-docusaurus-chatbot-ui-tasks-generation.tasks.prompt.md  4-docusaurus-chatbot-ui-implementation.green.prompt.md
history/prompts/001-navbar-language-switcher/: 1-navbar-language-switcher-spec.spec.prompt.md  2-navbar-language-switcher-plan.plan.prompt.md  3-navbar-language-switcher-tasks.tasks.prompt.md
history/prompts/general/: 1-fixed-chatbot-frontend-issues.general.prompt.md
specs/001-chatbot-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test-implementation.js
specs/001-chatbot-ui/checklists/: requirements.md
specs/001-chatbot-ui/contracts/: chat-api-contract.md
specs/001-navbar-language-switcher/: data-model.md  quickstart.md  research.md  tasks.md
src/components/: LanguageSwitcher.module.css  LanguageSwitcher.tsx
src/components/chatbot/: ChatBot.tsx  ChatBotButton.tsx  (+6 more)
src/context/: LanguageContext.tsx
src/theme/: LanguageSwitcher.tsx  Root.tsx  index.tsx
src/utils/: contentTranslator.ts  translate.ts  translations.ts
(+11 files in other folders)
