[project]
name = "new-folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=5.20.1",
    "fastapi>=0.127.0",
    "openai-agents>=0.6.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "trafilatura>=2.0.0",
]

[tool.uv.workspace]
members = [
    "prac",
]
